# flowersDetection.py

./: .gitignore  pyproject.toml  spawnDataset.ipynb
