[tool.poetry]
name = "flowersdetection-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flowersdetection"}]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
